# aoc

./: Cargo.toml  README.md
aoc2024/: .gitignore  Cargo.toml
aoc2024/benches/: benchmarks.rs
aoc2024/input/: README.md
aoc2024/src/: day1.rs  day2.rs  day3.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  macros.rs  main.rs
aoc2024/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs
aoc2024/src/input/: README.md  mod.rs
aoc2025/: Cargo.toml
aoc2025/.cargo/: config.toml
aoc2025/benches/: benchmarks.rs
aoc2025/src/: main.rs
aoc2025/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day19.rs  day21.rs
aoc2025/src/input/: README.md  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
utils/: directed_point.rs  direction.rs  grid.rs  lib.rs  moves.rs  point.rs
