[package]
name = "aoc2024"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
itertools = "0.13.0"
regex = "1.11.1"
aoc_utils = { path = ".." }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
